ghc-4335c07/testsuite/tests/overloadedrecflds/should_fail/OverloadedRecFldsFail10_B.hs
{-# LANGUAGE TypeFamilies #-}
module OverloadedRecFldsFail10_B (F(..)) where

import OverloadedRecFldsFail10_A hiding (foo)

data instance F Bool = MkFBool { foo :: Int }
